cmake_minimum_required(VERSION 4.0)
project(untitled C)

set(CMAKE_C_STANDARD 11)

add_executable(untitled main.c
        menus.h
        menus.c
        EE_Tools.c
        EE_Tools.h
        Mathmatic_Tools.c
        Mathmatic_Tools.h
        Unit_transfer.c
        Unit_transfer.h
        Mathmatic_Tools.c

)
